tests/NormalTests/paczka1/fuzzy1/85296079.err
Error in line 1: pyTp A442 56,7
Error in line 15: Kru A324 86,3
Error in line 17: Kru S248 16,9
Error in line 19: Kru A442 58,5
Error in line 20: Kru S248 53,0
Error in line 23: Kru A442 52,3
Error in line 24: 3qIdxZOWH A100 37,5
Error in line 33: Kru S248 96,1
Error in line 36: Kru A324 44,1
